--- a/Flight Sickness/Base.lproj/Main.storyboard
+++ b/Flight Sickness/Base.lproj/Main.storyboard
@@ -22,8 +22,71 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Flight Sickness" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4nc-aU-pae">
-                                <rect key="frame" x="34" y="179" width="306" height="77"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flight Sickness" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4nc-aU-pae">
+                                <rect key="frame" x="26" y="190.5" width="324.5" height="56"/>
+                                <fontDescription key="fontDescription" name="DDCHardware-Condensed" family="DDC Hardware" pointSize="48"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="keyPath" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pdC-hA-npQ">
+                                <rect key="frame" x="98" y="314.5" width="179" height="53"/>
+                                <state key="normal" image="StartButton"/>
+                                <connections>
+                                    <segue destination="BV1-FR-VrT" kind="presentation" id="FLn-vK-TxL"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="621-l5-FIV">
+                                <rect key="frame" x="121" y="418.5" width="59" height="59"/>
+                                <state key="normal" image="Settings"/>
+                                <connections>
+                                    <segue destination="dVr-Hf-TfW" kind="presentation" id="hUB-7D-J6h"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="93Q-Ly-207">
+                                <rect key="frame" x="197" y="420.5" width="55" height="55"/>
+                                <state key="normal" image="Leaderboard"/>
+                                <connections>
+                                    <segue destination="vRD-Bz-dTo" kind="presentation" id="xAx-Bf-yyn"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.41489166021347046" green="0.78131741285324097" blue="0.98142677545547485" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="4nc-aU-pae" firstAttribute="centerY" secondItem="slX-bw-CIO" secondAttribute="centerY" constant="-116" id="7KX-Jl-0ux"/>
+                            <constraint firstItem="621-l5-FIV" firstAttribute="top" secondItem="pdC-hA-npQ" secondAttribute="bottom" constant="51" id="TZw-7F-5Yf"/>
+                            <constraint firstItem="4nc-aU-pae" firstAttribute="centerX" secondItem="slX-bw-CIO" secondAttribute="centerX" id="dgL-uU-4md"/>
+                            <constraint firstItem="621-l5-FIV" firstAttribute="centerX" secondItem="slX-bw-CIO" secondAttribute="centerX" constant="-37" id="hBB-ge-a4b"/>
+                            <constraint firstItem="93Q-Ly-207" firstAttribute="top" secondItem="pdC-hA-npQ" secondAttribute="bottom" constant="53" id="kra-Vg-lOd"/>
+                            <constraint firstItem="93Q-Ly-207" firstAttribute="centerX" secondItem="slX-bw-CIO" secondAttribute="centerX" constant="37" id="pB2-O8-mSy"/>
+                            <constraint firstItem="pdC-hA-npQ" firstAttribute="centerX" secondItem="slX-bw-CIO" secondAttribute="centerX" id="rp6-sB-ybI"/>
+                            <constraint firstItem="pdC-hA-npQ" firstAttribute="top" secondItem="4nc-aU-pae" secondAttribute="bottom" constant="68" id="x7X-BY-0vd"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="8T6-m9-ria"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Apw-r2-8xB"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="l9M-Ta-gTH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-660" y="33.733133433283363"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="BQ0-Ty-adl">
+            <objects>
+                <viewController id="dVr-Hf-TfW" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yem-EC-P7q">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hb2-Yg-Wxb">
+                                <rect key="frame" x="16" y="20" width="59" height="59"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="back"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VwG-BW-BpE">
+                                <rect key="frame" x="107" y="148" width="169" height="62"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="DDCHardware-Condensed" family="DDC Hardware" pointSize="48"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -32,29 +95,14 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="keyPath" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pdC-hA-npQ">
-                                <rect key="frame" x="97" y="324" width="179" height="53"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="StartButton"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="621-l5-FIV">
-                                <rect key="frame" x="121" y="428" width="59" height="59"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="Settings"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="93Q-Ly-207">
-                                <rect key="frame" x="197" y="430" width="55" height="55"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="Leaderboard"/>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.41489166021347046" green="0.78131741285324097" blue="0.98142677545547485" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="8T6-m9-ria"/>
+                        <viewLayoutGuide key="safeArea" id="PZZ-IX-Zw7"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="l9M-Ta-gTH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BZw-BI-cRR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1330" y="-25"/>
+            <point key="canvasLocation" x="-1247.2" y="841.52923538230891"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="QFn-rN-Cas">
@@ -63,13 +111,30 @@
                     <view key="view" contentMode="scaleToFill" id="1rL-pb-ObA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2tO-xe-ASo">
+                                <rect key="frame" x="16" y="20" width="59" height="59"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="back"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Leaderboard" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t0q-eE-rsv">
+                                <rect key="frame" x="55" y="142" width="265" height="62"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="DDCHardware-Condensed" family="DDC Hardware" pointSize="48"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="keyPath" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.41489166021347046" green="0.78131741285324097" blue="0.98142677545547485" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="eto-lS-Sqd"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XEV-Ar-Q1B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-659" y="-9"/>
+            <point key="canvasLocation" x="-82.400000000000006" y="842.42878560719646"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
@@ -78,17 +143,19 @@
                     <view key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" id="3se-qz-xqx" customClass="SKView">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.25822636485099792" green="0.52619844675064087" blue="0.96220487356185913" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="4qk-I5-YsI"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="372" y="33.733133433283363"/>
         </scene>
     </scenes>
     <resources>
         <image name="Leaderboard" width="55" height="55"/>
         <image name="Settings" width="59" height="59"/>
         <image name="StartButton" width="179" height="53"/>
+        <image name="back" width="59" height="59"/>
     </resources>
 </document>
